# PAOO

./: CMakeLists.txt  main.cpp
Biblioteca/: Biblioteca.cpp  Biblioteca.hpp
Carte/: CMakeLists.txt  Carte.cpp  Carte.hpp
Detalii/: CMakeLists.txt  Detalii.hpp
src/: CMakeLists.txt  library.hpp  main.cpp  output
src/Carte/: CMakeLists.txt  Carte.cpp  Carte.hpp
src/Colectie/: CMakeLists.txt  Colectie.hpp
src/Detalii/: Detalii.cpp
src/EBook/: CMakeLists.txt  EBook.cpp  EBook.hpp
